2009-05-25  Andreia Gaita  <avidigal@novel.com>

	* timeline.h|cpp (DispatcherTimer): reset the clock properly when
	restarting a dispatcher timer. also, rename Run to Restart.
	note: if a timer is not stopped or started during it's tick event,
	the time spent on the tick is counted for the next tick on the
	Restart method.

2009-05-25  Chris Toshok  <toshok@ximian.com>

	* runtime.h|cpp (Surface::EmitError): add an overload so
	Application.cs can cause an error to be emitted on the surface.

	* cbinding.h|cpp: regen.

2009-05-25  Andreia Gaita  <avidigal@novel.com>

	* border.cpp (OnPropertyChanged): Invalidate when background is
	updated

2009-05-25  Chris Toshok  <toshok@ximian.com>

	* uielement.cpp (UIElement::GetTransformToUIElementWithError):
	this method fails incorrectly when you call it on the toplevel
	element of a surface.

2009-05-25  Chris Toshok  <toshok@ximian.com>

	* xaml.cpp (class XNamespace): name conflicts are pseudo-allowed
	for separate resource dictionary name registration.  this isn't
	exactly right, since the name *should* be unregistered.

2009-05-25  Chris Toshok  <toshok@ximian.com>

	* validators.cpp (Validators::TemplateValidator): this is causing
	DRT 438 to throw an exception and subsequently timeout.  its
	removal doesn't seem to break anything else, so ifdef it out with
	a comment.

2009-05-25  Alan McGovern  <amcgovern@novell.com>

	* cbinding.cpp
	* cbinding.h: Regen

	* dependencyobject.cpp
	* dependencyproperty.cpp
	* dependencyproperty.g.cpp
	* dependencyproperty.h
	* uielement.h: There are two types of DependencyProperty. 
	Core properties and custom properties. Custom properties
	do not set the parent on a DO. This makes the old 
	'SetsParent' property redundant, so remove it.


2009-05-22  Chris Toshok  <toshok@ximian.com>

	* xaml.cpp (XamlElementInstance::SetName): don't call
	AddToContainer here.  in case the element is a value type, and
	we're adding it to a RD on a managed type (like StackPanel), the