@@ -82,7 +82,7 @@ Glyphs::Glyphs ()
 	text = NULL;
 	index = 0;
 	
-	style_simulations = StyleSimulationsNone;
+	style = StyleSimulationsNone;
 	origin_y_specified = false;
 	origin_x = 0.0;
 	origin_y = 0.0;
@@ -217,7 +217,7 @@ Glyphs::Layout ()
 			i = 0;
 			do {
 				if (attr && (attr->set & Index)) {
-					if (!(glyph = font->GetGlyphInfoByIndex (attr->index, (StyleSimulations) style_simulations)))
+					if (!(glyph = font->GetGlyphInfoByIndex (attr->index, (StyleSimulations) style)))
 						goto next1;
 				} else if (cluster) {
 					// indexes MUST be specified for each glyph in a cluster
@@ -226,7 +226,7 @@ Glyphs::Layout ()
 					path = NULL;
 					goto done;
 				} else {
-					if (!(glyph = font->GetGlyphInfo (*c, (StyleSimulations) style_simulations)))
+					if (!(glyph = font->GetGlyphInfo (*c, (StyleSimulations) style)))
 						goto next1;
 				}
 				
@@ -312,7 +312,7 @@ Glyphs::Layout ()
 			goto done;
 		}
 		
-		if (!(glyph = font->GetGlyphInfoByIndex (attr->index, (StyleSimulations) style_simulations)))
+		if (!(glyph = font->GetGlyphInfoByIndex (attr->index, (StyleSimulations) style)))
 			goto next;
 		
 		y1 = y0;
@@ -832,7 +832,7 @@ Glyphs::OnPropertyChanged (PropertyChangedEventArgs *args, MoonError *error)
 		origin_y_specified = true;
 		dirty = true;
 	} else if (args->GetId () == Glyphs::StyleSimulationsProperty) {
-		style_simulations = (args->GetNewValue ()->AsInt32 () & StyleSimulationsBoldItalic);
+		style = (args->GetNewValue ()->AsInt32 () & StyleSimulationsBoldItalic);
 		dirty = true;
 	}
 	
